# pyMultiSerial

./: README.md  example1.py  pyMultiSerial.py  pyproject.toml  setup.cfg
Examples/: 1.Reading_from_All_Ports_Simultaneously.py  2.Monitor_Connections.py  3.Monitor_Connections_and_Read_from_all_ports.py  Adv1_Authenticate_on_connection.py  Example1  Example_with_all_functionality.py  Example_with_all_functions.py  README.md  Reading_from_All_Ports_Simultaneously.py
Examples/Python - Arduino  Communication Examples/: Arduino.ino  Python.py
docs/: callback_functions.rst  conf.py  getting_started.rst  how_to_use.rst  index.rst  multiserial_class.rst  overview.rst  pyMultiSerial.rst
pyMultiSerial/: pyMultiSerial.py
src/pyMultiSerial/: __init__.py  pyMultiSerial.py
