[metadata]
# replace with your username:
name = pyMultiSerial
version = 1.0.0
author = Sunit Raut
author_email = svraut29@gmail.com
description = A Python library for continuous communication with multiple serial ports, based on pyserial module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SunitRaut/pyMultiSerial
project_urls =
    Bug Tracker = https://github.com/SunitRaut/pyMultiSerial/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3.0
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src
